# weeklyreview_todotxt

./: .gitignore  .pre-commit-config.yaml  CompleteOrdering.ipynb  Pipfile  README.md  function_app.py  host.json  pyproject.toml  readme.txt  requirements.txt  scratch.ipynb  setup.py  sql.ipynb
.github/workflows/: master_insync-lists.yml
insync/: __init__.py  __init__.test.py  app.py  conftest.py  db.py  db.test.py  db_test.py  githash.py  hello.html  list.html  list.py  list_test.py  listitem.py  listitem_test.py  listregistry.py  listregistry_test.py  listview.py  listview_test.py  renderer.py  undoview_test.py
insync/app/: __init__.py  auth_middleware.py  checklist.css  checklist.html  checklist.py  checklist_index.html  checklist_items.html  index.html  index.py  jinja_filters.py  jinja_templates.py  just changed azure webapp to not require.md  login.html  login.py  sqladmin.html  sqladmin.py  staticfilewhitelist.py  todotxt.html  todotxt.py  todotxt_items.html  ws.py  ws_list_updater.py  ws_list_updater_test.py  xxx.py
insync/app/common/: layout.css  layout.html  site.webmanifest
insync/app/xxx/: TODO.md  __init__.py  layoutx.css  layoutx.html  shopping_list.css  shopping_list.html  xxx.js  xxx.py
tests/: test_imports.py  test_parser.py  test_phases.py  test_prompter.py  test_simple.py  test_taskstoprojects.py  test_weeklyreviewsession.py
weeklyreviewtodotxt/: \  parser.py  prompter.py  tasktoprojects.py
